--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "@react-navigation/stack": "^6.4.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.6",
-    "expo": "~51.0.28",
+    "expo": "^52.0.44",
     "expo-build-properties": "~0.12.5",
-    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
@@ -48,6 +47,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.18.2",
     "react-native-paper": "^5.12.5",
@@ -62,6 +62,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
